Fix delete form is hidden under video

--- a/web/war/src/main/webapp/less/detail/detail.less
+++ b/web/war/src/main/webapp/less/detail/detail.less
@@ -106,6 +106,9 @@
 
   }
 
+  .delete-form {
+    overflow: auto;
+  }
   .delete-form .underneath .form {
     margin-top: 0;
   }
